--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: vvs
 
 # Short bio or description (displayed in the header)
-description: p5.js tinkerer
+description: crypto and underground music weirdo
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/vvsys/vvsys.github.io/master/images/avi.png
